--- a/app/views/cookies/index.html.haml
+++ b/app/views/cookies/index.html.haml
@@ -7,4 +7,4 @@
             By using XYZ, you agree to our
           %div{class: "flex inline-block"}
             = link_to "Reject", cookies_path(cookies_accepted: false), class: "px-2"
-            = link_to "Accept", cookies_path(cookies_accepted: true), class: "px-2", onClick: "consentGranted()"
+            = link_to "Accept", cookies_path(cookies_accepted: true), class: "px-2", id: "accepted"
