--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -10,12 +10,12 @@
           %iframe{allowfullscreen: "", height: "450", width: "600", loading: "lazy", referrerpolicy: "no-referrer-when-downgrade", src: "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5349.459246092125!2d33.456670112719706!3d47.902918261544116!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40db2100265898f1%3A0xc888e195cbff0202!2z0KjQstC10LnQvdCwINC80LDQudGB0YLQtdGA0L3RjyDimJ4g0JTQoNCj0JbQkdCQIOKYnA!5e0!3m2!1sru!2sua!4v1718172960386!5m2!1sru!2sua", style: "position:relative; border:0;"}
         %div{class: "md:w-1/2"}
           %div{class: "px-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_1")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_1")
           %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_2")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_2")
@@ -24,7 +24,7 @@
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_3")
           %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_4")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_4")
