--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -11,7 +11,7 @@
         %div{class: "max-w-3xl mx-auto mb-8"}
           %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
             %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
-              %h1{class: "text-gray-900 font-bold text-3xl mb-2"}
+              %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
                 = @service.subtitle
               %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @service.description
