--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -10,7 +10,7 @@
           = image_tag("zip.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card1.alt"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card1.h3"
 
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
@@ -24,7 +24,7 @@
           = image_tag("jeans.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card2.alt"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card2.h3"
                 
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
@@ -38,7 +38,7 @@
           = image_tag("skin.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card3.h3"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card3.h3"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 = t "landing.services.card3.p1"     
@@ -50,7 +50,7 @@
           = image_tag("niz.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card4.h3"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card4.h3"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 = t "landing.services.card4.p1"     
@@ -62,7 +62,7 @@
           = image_tag("melkiy.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card5.h3"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card5.h3"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 = t "landing.services.card5.p1"     
@@ -74,7 +74,7 @@
           = image_tag("shtory.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card6.h3"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = t "landing.services.card6.h3"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                 = t "landing.services.card6.p1"     
