--- a/app/views/shared/_4_prices.html.haml
+++ b/app/views/shared/_4_prices.html.haml
@@ -9,7 +9,7 @@
         Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
         Високий професіоналізм та великий рівень якості наданих послуг.
     %div{class: "space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0"}
-      %div{class: "flex flex-col max-w-lg p-6 mx-auto text-center text-gray-900 bg-white border border-gray-100 rounded-lg shadow"}
+      %div{class: "flex flex-col max-w-lg p-6 mx-auto text-center text-stone-900 bg-white border border-gray-100 rounded-lg shadow"}
         %h3{class: "mb-4 text-2xl font-semibold"} Starter
         %p{class: "font-light text-gray-500 sm:text-lg"}
           Best option for personal use & for
@@ -47,7 +47,7 @@
         %a.text-white.bg-purple-600.hover:bg-purple-700.focus:ring-4.focus:ring-purple-200.font-medium.rounded-lg.text-sm.px-5.text-center.dark:text-white.dark:focus:ring-purple-900{:class => "py-2.5", :href => "#"}
           Get
           started
-      .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
+      .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-stone-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
         %h3.mb-4.text-2xl.font-semibold Company
         %p{class: "font-light text-gray-500 sm:text-lg"}
           Relevant for multiple users, extended
@@ -85,7 +85,7 @@
         %a.text-white.bg-purple-600.hover:bg-purple-700.focus:ring-4.focus:ring-purple-200.font-medium.rounded-lg.text-sm.px-5.text-center.dark:text-white.dark:focus:ring-purple-900{:class => "py-2.5", :href => "#"}
           Get
           started
-      .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
+      .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-stone-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
         %h3.mb-4.text-2xl.font-semibold Enterprise
         %p{class: "font-light text-gray-500 sm:text-lg"}
           Best for large scale uses and extended
