--- a/app/views/shared/_7_faq.html.haml
+++ b/app/views/shared/_7_faq.html.haml
@@ -13,7 +13,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q1")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -27,7 +27,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q2")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -44,7 +44,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q3")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -61,7 +61,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q4")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -78,7 +78,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
               = t ("faq.q5")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
