--- a/app/views/shared/_contact_form.html.haml
+++ b/app/views/shared/_contact_form.html.haml
@@ -17,7 +17,7 @@
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "phone"}
             = t("landing.contact_form.phone")
-          = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone', autocomplete: "phone"
+          = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone', autocomplete: "off"
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "email"}
             = t("landing.contact_form.email")
