--- a/app/views/cookies/index.html.haml
+++ b/app/views/cookies/index.html.haml
@@ -5,8 +5,8 @@
         .p-4.flex.items-center.justify-between.px-6.rounded.border.border-green-700
           %p
             = t ("cookies.p1")
-            = link_to "#{t ("cookies.link")}", cookie_policy_path, class: "text-red-500 hover:border-b-2 hover:border-red-500"
+            = link_to "#{t ("cookies.link")}", policy_path, target: "_blank", class: "text-red-500 hover:border-b-2 hover:border-red-500"
             = t ("cookies.p2")
           %div{class: "flex inline-block"}
-            = link_to "#{t ("cookies.reject")}", cookies_path(cookies_accepted: false), class: "px-2", id: "rejected"
-            = link_to "#{t ("cookies.accept")}", cookies_path(cookies_accepted: true), class: "px-2", id: "accepted"
+            = link_to "#{t ("cookies.reject")}", cookies_path(cookies_accepted: false), class: "mx-1 px-2 hover:text-red-500", id: "rejected"
+            = link_to "#{t ("cookies.accept")}", cookies_path(cookies_accepted: true), class: "mx-1 px-2 bg-stone-100 hover:text-red-500 border border-red-500 rounded-lg", id: "accepted"
