--- a/app/views/landing/faq.html.haml
+++ b/app/views/landing/faq.html.haml
@@ -8,7 +8,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q1")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -22,7 +22,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q2")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -39,7 +39,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q3")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -56,7 +56,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
               = t ("faq.q4")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -73,7 +73,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
               = t ("faq.q5")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -87,7 +87,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
               = t ("faq.q6")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
@@ -101,7 +101,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
               = t ("faq.a7")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
