--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,6 +35,7 @@
       gtag('js', new Date());
       gtag('config', 'GTM-TJBHGWFJ');
       gtag('config', 'G-B1HN94WVHN');
+      gtag('config', 'pub-3829218691602401');
         
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
@@ -61,9 +62,9 @@
     %script{async: "", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
 
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
+    %navigation{class: ""}
+      = render "shared/navigation"
     %main{class: ""}
-      %navigation{class: ""}
-        = render "shared/navigation"
       = yield
     %footer{class: "relative start-0 bottom-0", id: "footer"}
       = render "shared/footer"
