--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -51,7 +51,7 @@
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           %div{class: "p-4 pt-2 h-auto md:min-h-72"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
               %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
                 = service.description
@@ -72,7 +72,7 @@
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           %div{class: "p-4 pt-2 h-auto md:min-h-72"}
             %div{class: "mb-8"}
-              %h3{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
               %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
                 = service.description
