--- a/app/views/shared/_8_contacts.html.haml
+++ b/app/views/shared/_8_contacts.html.haml
@@ -10,12 +10,12 @@
           %iframe{allowfullscreen: "", height: "450", width: "600", loading: "lazy", referrerpolicy: "no-referrer-when-downgrade", src: "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5349.459246092125!2d33.456670112719706!3d47.902918261544116!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40db2100265898f1%3A0xc888e195cbff0202!2z0KjQstC10LnQvdCwINC80LDQudGB0YLQtdGA0L3RjyDimJ4g0JTQoNCj0JbQkdCQIOKYnA!5e0!3m2!1sru!2sua!4v1718172960386!5m2!1sru!2sua", style: "position:relative; border:0;"}
         %div{class: "md:w-1/2"}
           %div{class: "px-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_1")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_1")
           %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_2")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_2")
@@ -29,19 +29,19 @@
                 %i{class: "fa-solid fa-triangle-exclamation"}
               %div{class: "ms-auto text-md font-normal text-center"}
                 = t ("contacts.warning.div1")
-                %span{class: "px-[5px] text-gray-900 whitespace-nowrap"}
+                %span{class: "px-[5px] text-stone-900 whitespace-nowrap"}
                   %i{class: "fa-solid fa-phone"}
                   %a{href: "tel:+380972870571"}
                     = t ("contacts.warning.a")
                 %br
                 = t ("contacts.warning.div2")
-              %button{class: "ms-auto bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 -mx-1.5 -my-1.5 p-1.5", "aria-label": "Close", "data-dismiss-target": "#warning", type: "button"}
+              %button{class: "ms-auto bg-white text-gray-400 hover:text-stone-900 rounded-lg focus:ring-2 focus:ring-gray-300 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 -mx-1.5 -my-1.5 p-1.5", "aria-label": "Close", "data-dismiss-target": "#warning", type: "button"}
                 %span.sr-only Close
                 %i{class: "fa-solid fa-xmark"}
 
 
           %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
-            %h3{class: "text-lg font-medium text-gray-900"}
+            %h3{class: "text-lg font-medium text-stone-900"}
               = t ("contacts.h3_4")
             %p{class: "mt-1 text-gray-600 text-2xl"}
               = t ("contacts.p_4")
