--- a/app/views/landing/policy.ru.html.haml
+++ b/app/views/landing/policy.ru.html.haml
@@ -1,4 +1,4 @@
-%section{class: "mb-2 text-justify mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
+%section{class: "list mb-2 text-justify mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %h1{class: "text-center text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
     Условия использования
   %h2{class: "text-2xl text-stone-900 sm:text-2xl leading-normal font-extrabold tracking-tight indent-8 text-2xl text-stone-900 sm:text-2xl leading-normal font-extrabold tracking-tight indent-8"}
