--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,9 +3,9 @@
     %div{class: "w-full px-4"}
       %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
         - if @article.image.present?
-          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title}
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title, role: "img", "aria-label": @article.title}
         - else
-          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title}
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title, role: "img", "aria-label" @article.title}
         %div{class: "max-w-5xl mx-auto mb-8"}
           %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
             %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
