--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -41,7 +41,7 @@
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
   %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
     = t ("service.h2_1")
-  %div{class: "grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-10"}
+  %div{class: "grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 gap-10"}
     - @services.repair.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
@@ -49,7 +49,7 @@
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:min-h-72"}
+          %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[300px] lg:max-h-[300px] xl:max-h-[300px]"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
@@ -70,7 +70,7 @@
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:min-h-72"}
+          %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[300px] lg:max-h-[300px] xl:max-h-[300px]"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
