--- a/app/views/landing/about.html.haml
+++ b/app/views/landing/about.html.haml
@@ -1,4 +1,4 @@
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
-    %h1{class: "text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+    %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
       Трішечки про нас
