--- a/app/views/admin/orders/_form_order_detail.html.haml
+++ b/app/views/admin/orders/_form_order_detail.html.haml
@@ -1,6 +1,6 @@
 %tr.nested-fields{ class: "#{'d-none' if form.object._destroy}", data: { new_record: form.object.new_record? } }
   %td.nested_form
-    = render Admin::FieldsetComponent.new(form, :service_id, :select, required: true, no_label: true, list: Admin::Service.all.pluck(:title, :id), selected_value: form.object.service_id)
+    = render Admin::FieldsetComponent.new(form, :service_id, :association_search, required: true, no_label: true, association_name: :service_title, search_path: admin_services_path(name_field: :title), name_field: :service_title)
   %td.icon_cell
     = link_to "#", class: 'd-block', data: { action: "click->nested-form#remove_association" } do
       %i.bi.bi-trash.h3
