--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,6 +1,6 @@
 %div{class: "container mx-auto my-4 font-messiri"}
   %div{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
-    "Пошиття #{@service.title}"
+    = @service.title}
   %div{class: "flex flex-col lg:flex-row justify-between"}
     %div{class: "px-4 lg:w-8/12"}
       %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
