--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,5 +1,5 @@
 %div{class: "container mx-auto my-4 font-messiri"}
-  %div{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
+  %h1{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
     = @service.title
   %div{class: "flex flex-col lg:flex-row justify-between"}
     %div{class: "px-4 lg:w-8/12"}
@@ -11,7 +11,7 @@
         %div{class: "max-w-3xl mx-auto mb-8"}
           %div{class: "mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal"}
             %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
-              %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
+              %h2{class: "text-stone-900 font-bold text-3xl mb-2"}
                 = @service.subtitle
               %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
                 = @service.description
