--- a/app/views/landing/faq.html.haml
+++ b/app/views/landing/faq.html.haml
@@ -101,17 +101,34 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
           %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
-            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
-              = t ("faq.a7")
+            %h4{class: "text-md leading-6 font-medium text-stone-900"}
+              = t ("faq.q7")
         %div{class: "flex flex-row items-start"}
           %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700 "}
               = t ("faq.a7")
+              %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
+                = link_to "#{t ("faq.a7_1")}", prices_path + "#factors"
+              = t ("faq.a7_2")
+          %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+            %i{class: "fa-regular fa-comment-dots"}
+      -#
+      %li{class: "text-left mb-4"}
+        %div{class: "flex flex-row items-start mb-2"}
+          %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+            %i{class: "fa-regular fa-circle-question"}
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-stone-900 "}
+              = t ("faq.a8")
+        %div{class: "flex flex-row items-start"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %p{class: "text-gray-700 "}
+              = t ("faq.a8")
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
 
-    %p{class: "text-2xl text-stone-500 sm:text-3xl leading-normal font-extrabold tracking-tight"}
-      = t ("faq.p1")
-      %button{onclick: "contactFormModal.classList.remove('hidden');", id: "openContactForm", href: "", class: "leading-8 text-red-500 hover:border-b-2 hover:border-red-500"}
-        = t ("faq.p2")
-      = t ("faq.p3")
+  %p{class: "text-2xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight"}
+    = t ("faq.p1")
+    %button{onclick: "contactFormModal.classList.remove('hidden');", id: "openContactForm", href: "", class: "leading-8 text-red-500 hover:border-b-2 hover:border-red-500"}
+      = t ("faq.p2")
+    = t ("faq.p3")
