--- a/app/views/landing/prices.html.haml
+++ b/app/views/landing/prices.html.haml
@@ -40,3 +40,48 @@
               %span{class: "text-stone-900"}
                 = sewing.price
               = t ("prices.td_2")
+  %div{id: "factors my-4", class: "text-justify"}
+    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
+      = t ("prices.p1")
+    %p{class: "pt-4 text-2xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+      = t ("prices.p2")
+    %ul{class: "list ms-4"}
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_1")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_1")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_2")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_2")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_3")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_3")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_4")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_4")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_5")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_5")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_6")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_6")
+      %li{class: ""}
+        %b{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+          = t ("prices.ul.b_7")
+        %span{class: "text-xl text-stone-700 sm:text-3xl leading-normal font-normal tracking-tight"}
+          = t ("prices.ul.li_7")
+    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
+      = t ("prices.p3")
+    %p{class: "pt-4 text-2xl text-center text-stone-700 sm:text-3xl leading-normal font-extrabold tracking-tight"}
+      = t ("prices.p4")
