--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -3,6 +3,11 @@
   %div{class: "text-center"}
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
       = t ("contacts.h1")
+    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
+      = t ("contacts.p_11")
+    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
+      = t ("contacts.p_12")
+  
   %div{class: "text-center lg:text-left my-10"}
     %div{class: ""}
       %div{class: "flex flex-col md:flex-row"}
