--- a/app/views/landing/contacts.html.haml
+++ b/app/views/landing/contacts.html.haml
@@ -1,12 +1,12 @@
--#%div{class: ""}
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
-  %div{class: "text-center"}
-    %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
-      = t ("contacts.h1")
-    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
-      = t ("contacts.p_11")
-    %p{class: "pt-4 text-xl text-stone-700 sm:text-3xl leading-normal font-semibold tracking-tight indent-8"}
-      = t ("contacts.p_12")
+  %h1{class: "mb-3 text-center text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
+    = t ("contacts.h1")
+  %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
+    = t ("contacts.p_11")
+  %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
+    = t ("contacts.p_12")
+  %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
+    = t ("contacts.p_13")
   
   %div{class: "text-center lg:text-left my-10"}
     %div{class: ""}
@@ -56,3 +56,9 @@
     %h2{class: "text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
       = t ("contacts.p_10")
   %iframe{allowfullscreen: "true", height: "450", loading: "lazy", referrerpolicy: "no-referrer-when-downgrade", src: "https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d10698.238356665104!2d33.45117166454058!3d47.90620892871753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x40db2101db405865%3A0x59912bbd92c796ba!2z0JrRgNC40LLQuNC5INCg0ZbQsy3Qk9C-0LvQvtCy0L3QuNC5LCDRg9C70LjRhtCwINCX0LDQu9C40LfQvdGL0YfQvdGL0LrQuNCyLCDQmtGA0LjQstC-0Lkg0KDQvtCzLCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjA!3m2!1d47.912468!2d33.4518661!4m5!1s0x40db2100265898f1%3A0xc888e195cbff0202!2z0KjQstC10LnQvdCwINC80LDQudGB0YLQtdGA0L3RjyDimJ4g0JTQoNCj0JbQkdCQIOKYnCwg0JrQvtC60YfQtdGC0LDQstGB0YzQutCwINCy0YPQu9C40YbRjywgMywg0JrRgNC40LLQuNC5INCg0ZbQsywg0JTQvdGW0L_RgNC-0L_QtdGC0YDQvtCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDUwMDAw!3m2!1d47.903057!2d33.4573497!5e0!3m2!1sru!2sua!4v1720547799422!5m2!1sru!2sua", style: "border:0;"}
+
+%section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
+  %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
+    = t ("contacts.p_14")
+  %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
+    = t ("contacts.p_15")
