--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -15,3 +15,5 @@
                 = @article.description
               %p{class: "text-base leading-8 my-5"}
                 = @article.body
+            %div{class: "text-end p-4"}
+            = link_to "#{t ("service.back")}", articles_path, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
