--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -30,6 +30,8 @@
     border-left: 3px solid rgba(239, 68, 68, 1);
     color: rgba(120, 113, 108, 1);
     background-color: rgba(255, 255, 255, 1);
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
 
   ul {
