--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -32,6 +32,7 @@
     background-color: rgba(255, 255, 255, 1);
     white-space: pre-wrap;
     word-wrap: break-word;
+    text-align: justify;
   }
 
   ul {
