--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -5,21 +5,21 @@
 
   %div{class: "mx-auto p-5 sm:p-10 md:p-16 lg:p-4 xl:p-2"}
     %div{class: "grid grid-cols-1 xl:grid-cols-3 lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-5"}
-      - @services.each do |service|
-        %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
+      - @repairs.each do |repair|
+        %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(repair)}
           %div{class: "row relative"}
-            - if service.image.attached?
-              = image_tag service.image, class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{service.title}"
+            - if repair.image.attached?
+              = image_tag repair.image, class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{repair.title}"
             %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
               %div{class: "mb-8"}
                 %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
-                  = service.title
+                  = repair.title
 
                 %p{class: "mx-auto text-base leading-relaxed text-red-500"}
                   від
-                  = service.price
+                  = repair.price
                   грн.
                 
                 %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
-                  = service.description
+                  = repair.description
                   
