--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,19 +40,9 @@
       gtag('config', 'GTM-TJBHGWFJ');
       gtag('config', 'G-B1HN94WVHN');
 
-    -# Google fonts
-    %link{href: "https://fonts.googleapis.com", rel: "preconnect"}
-    %link{crossorigin: "", href: "https://fonts.gstatic.com", rel: "preconnect"}
-    %link{href: "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", rel: "stylesheet"}
-    %link{href: "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", rel: "stylesheet"}
-
     -# FlowbiteJS
     %link{href: "https://unpkg.com/flowbite@latest/dist/flowbite.css", rel: "stylesheet"}
     %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
-
-    -# AnimatedCSS and WOWjs
-    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
-    %script{async: "", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
 
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
@@ -78,7 +68,22 @@
         %i{class: "text-2xl text-stone-600 fa-solid fa-jet-fighter-up"}
       %div{id: "scroll-to-top", class: "w-24 absolute z-10 invisible inline-block transition-opacity duration-300", "data-popover": "", role: "tooltip"}
         %p{class: "font-messiri text-md text-stone-600"} До початку
-    
+
+    -# Google fonts
+    %link{href: "https://fonts.googleapis.com", rel: "preconnect"}
+    %link{crossorigin: "", href: "https://fonts.gstatic.com", rel: "preconnect"}
+    %link{href: "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap",
+          rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap",
+          rel: "stylesheet"}
+  
+    -# AnimatedCSS and WOWjs
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
+    %script{async: "", crossorigin: "anonymous",
+            integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==",
+            referrerpolicy: "no-referrer",
+            src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
+
     :javascript
       function consentGranted() {
         gtag('consent', 'update', {
