--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -9,8 +9,8 @@
   = render "shared/3_hero_section"
 -#%div{class: "wow mt-8", id: "prices"}
 -#  = render "shared/4_prices"
-%div{class: "even wow mt-8", id: "about"}
-  = render "shared/5_about"
+-#%div{class: "even wow mt-8", id: "about"}
+-#  = render "shared/5_about"
 -#%div{class: "wow mt-8", id: "reviews"}
 -#  = render "shared/6_reviews"
 %div{class: "odd wow mt-8", id: "faq"}
