--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,4 +1,8 @@
 /* Custom styles */
+.mask {
+  mask-image: linear-gradient(180deg, white, rgba(255, 255, 255, 0));
+}
+
 .h-shadow {
   text-shadow: 1px 1px 2px rgba(174, 10, 10, 0.5);
 }
